# marketing-mix-modelling

./: .gitignore  .gitmodules  AGENTS.md  PLAN.md  benchmark_quick_results.csv  conjura_mmm_data_dictionary.tsv  hill_mixture_mmm.py  main.py  pyproject.toml
data/: README.md  visualize_data.py
docs/: BENCHMARK_REPORT.md  COMPONENT_RESOLVABILITY_BENCHMARK.md  COMPONENT_SEPARATION_EFFECTIVE_COUNT.md  CONVERGENCE_EXPERIMENTS_HANDOVER.md  HALFNORMAL_CONVERGENCE_EXPERIMENTS.md  HYPERPRIOR_DESIGN.md  LABEL_SWITCHING_DIAGNOSTICS.md  MMM_EVALUATION_METRICS.md  PYDATA_SUBMISSION.md  README.md  REAL_DATA_VALIDATION_PROGRESS.md  SYNTHETIC_BENCHMARK_DESIGN.md  VALIDATION_SUMMARY_REPORT.md  research-summary.md
hill_mmm/: __init__.py  baseline.py  benchmark.py  data.py  data_loader.py  inference.py  metrics.py  models.py  real_benchmark.py  transforms.py
mmm-explorer/: package-lock.json  package.json
paper/: hill_mixture_mmm_paper.md
results/: EXPERIMENT_RESULTS.md  inference_accuracy_lognormal.csv  inference_accuracy_lognormal_log.txt  results_v2.csv  results_v2_summary.csv  vi_experiment_log.txt
scripts/: calibrate_controlled_tv_grid.py  calibrate_resolvability_grid.py  check_convergence.py  compare_vertical_metrics_resolvability.py  compare_vertical_metrics_tv_profile.py  generate_benchmark_figures.py  run_benchmark.py  run_benchmarks.py  run_component_resolvability_sweep.py  run_controlled_k_spacing_sweep.py  run_controlled_tv_profile_sweep.py  run_inference_accuracy_comparison.py  run_model_comparison.py  run_paper_experiments.py  run_quick_validation.py  (+6 more)
(+61 files in other folders)
