[project]
name = "hill-mixture-mmm"
version = "0.1.0"
description = "Bayesian Marketing Mix Modeling with Mixture of Hill Curves"
requires-python = ">=3.11"

dependencies = [
    "numpyro>=0.15.0",
    "jax>=0.4.30",
    "arviz>=0.18.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled separately
